spec/hecate/core/renderer/__snapshots__/tty/simple_error.snap
error: undefined variable
  --> simple.cr:1:5
  |
1 | let x = 42;
  |     ^ not found
2 | let y = x + 1;
  |
